WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122643
[sh4] Fix build after
r157209
https://bugs.webkit.org/show_bug.cgi?id=122643
Summary
[sh4] Fix build after r157209
Julien Brianceau
Reported
2013-10-11 00:44:24 PDT
Add framePointerRegister and firstRegister() declarations in SH4 part of JavaScriptCore to fix build after
r157209
.
Attachments
Add framePointerRegister and firstRegister() declarations in SH4.
(1.90 KB, patch)
2013-10-11 00:46 PDT
,
Julien Brianceau
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julien Brianceau
Comment 1
2013-10-11 00:46:35 PDT
Created
attachment 213974
[details]
Add framePointerRegister and firstRegister() declarations in SH4.
Ryosuke Niwa
Comment 2
2013-10-11 00:52:35 PDT
Comment on
attachment 213974
[details]
Add framePointerRegister and firstRegister() declarations in SH4. rs=me.
WebKit Commit Bot
Comment 3
2013-10-11 01:25:15 PDT
Comment on
attachment 213974
[details]
Add framePointerRegister and firstRegister() declarations in SH4. Clearing flags on attachment: 213974 Committed
r157295
: <
http://trac.webkit.org/changeset/157295
>
WebKit Commit Bot
Comment 4
2013-10-11 01:25:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug