[sh4] Fix build after r157209. https://bugs.webkit.org/show_bug.cgi?id=122643

Patch by Julien Brianceau <jbriance@cisco.com> on 2013-10-11
Reviewed by Ryosuke Niwa.

* assembler/MacroAssemblerSH4.h: Add framePointerRegister declaration.
* assembler/SH4Assembler.h: Add firstRegister() declaration.
(JSC::SH4Assembler::firstRegister):

Canonical link: https://commits.webkit.org/140764@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157295 268f45cc-cd09-0410-ab3c-d52691b4dbfc